[package]
name = "lob-reconciliation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.16.0", features = ["native-tls"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
url = "2.2.2"
